# NamedEditorGroups

./: .gitignore  ABOUT.md  CHANGELOG.md  CMakeLists.txt  README.md  mod.json
.github/workflows/: multi-platform.yml
api/: NIDEnum.hpp  NIDExtrasManager.hpp  NIDManager.hpp
api/events/: NewNamedIDEvent.hpp  NewNamedIDExtrasEvent.hpp  RemovedNamedIDEvent.hpp  RemovedNamedIDExtrasEvent.hpp
api/include/: NIDEnum.hpp  NIDManager.hpp
api/types/: NamedIDExtras.hpp
src/: API.cpp  main.cpp  prelude.hpp
src/base64/: base64.cpp  base64.hpp
src/data/: NIDExtrasManager.cpp  NIDManager.cpp  NamedIDs.cpp  NamedIDs.hpp
src/events/: NewNamedIDEvent.hpp  RemovedNamedIDEvent.hpp
src/hooks/: EditorUITweaks.cpp  LevelEditorLayerData.cpp  LevelEditorLayerData.hpp  LevelSettingsLayer.cpp
src/hooks/objects/: ObjectLabels.cpp
src/hooks/ui/: CustomizeObjectLayer.cpp  EditLevelLayer.cpp  GJColorSetupLayer.cpp  SetGroupIDLayer.cpp  SetIDPopup.cpp  SetupPopups.cpp  SetupPopups.hpp
src/hooks/ui/hardcoded/: CollisionBlockPopup.cpp  ColorSelectPopup.cpp  GJFollowCommandLayer.cpp  GJPFollowCommandLayer.cpp  SetupAnimationPopup.cpp  SetupAreaAnimTriggerPopup.cpp  SetupCameraEdgePopup.cpp  SetupCollisionTriggerPopup.cpp  SetupCountTriggerPopup.cpp  SetupInstantCountPopup.cpp  SetupOpacityPopup.cpp  SetupPulsePopup.cpp  SetupRandAdvTriggerPopup.cpp  SetupRandTriggerPopup.cpp  SetupSequenceTriggerPopup.cpp  SetupSpawnPopup.cpp  SetupTouchTogglePopup.cpp
src/parser/: IDFormatParser.cpp  IDFormatParser.hpp
src/popups/: AddNamedIDPopup.cpp  AddNamedIDPopup.hpp  AutofillNamedIDsPreview.cpp  AutofillNamedIDsPreview.hpp  EditDescriptionPopup.cpp  EditDescriptionPopup.hpp  EditNamedIDPopup.cpp  EditNamedIDPopup.hpp  NamedIDsPopup.cpp  NamedIDsPopup.hpp  SelectIDFilterPopup.cpp  SelectIDFilterPopup.hpp  SharePopup.cpp  SharePopup.hpp
src/popups/cells/: NamedIDCell.cpp  NamedIDCell.hpp
src/popups/items/: NamedIDItem.cpp  NamedIDItem.hpp
src/types/: AutofillInput.cpp  AutofillInput.hpp  DynamicPropertyTypes.hpp  FastMap.hpp  GameObjectData.hpp
src/utils/: benchmark.hpp  constants.hpp  fuzzy_match.cpp  fuzzy_match.hpp  globals.hpp  joined_spans.hpp  operators.hpp  touchprio_fix.hpp  utils.cpp  utils.hpp  vmthooker.hpp
